log
Sun May 15 17:10:21 HSP 2022: 
 tests:  0|5
total_score: 0/70
a4236f3
Sun May 15 17:23:11 HSP 2022: 
 sudoku.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:60:21: error: assignment to expression with array type
         new -> sudo = n -> sudo;
                     ^
sudoku.c:55:11: error: unused variable 'data' [-Werror=unused-variable]
     void* data;
           ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
362de0c
Sun May 15 17:23:38 HSP 2022: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:59:21: error: assignment to expression with array type
         new -> sudo = n -> sudo;
                     ^
Compilation failed
4f6e684
Sun May 15 17:34:58 HSP 2022: 
 sudoku.c | 16 ++++++++++------
 1 file changed, 10 insertions(+), 6 deletions(-)
 tests:  0|5
total_score: 0/70
bce8c9b
Sun May 15 17:35:54 HSP 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
7d1dc99
Sun May 15 17:36:16 HSP 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
eb4c1b7
Sun May 15 17:41:04 HSP 2022: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
3742557
Sun May 15 18:28:04 HSP 2022: 
 sudoku.c | 28 ++++++++++++++++++++++++++++
 1 file changed, 28 insertions(+)
 tests:  0|5
total_score: 0/70
6d65697
